# broccoli

./: .gitignore  Cargo.toml  LICENSE  README.md  chat.html
short-url-axum/: Cargo.toml  README.md
src/: main.rs
todo-axum/: .env  Cargo.toml  README.md
todo-axum/src/: config.rs  error.rs  form.rs  model.rs
todo-axum/src/db/: mod.rs  todo_item.rs  todo_list.rs
todo-axum/src/handler/: mod.rs
try-auxm/response/: Cargo.toml
try-auxm/response/src/: errors.rs  main.rs
try-axum/config/: .env  Cargo.toml
try-axum/config/src/: main.rs
try-axum/cookie/: Cargo.toml
try-axum/cookie/src/: main.rs
try-axum/error-handling/extract/: Cargo.toml
try-axum/error-handling/extract/src/: extract.rs  handler.rs  main.rs
try-axum/error-handling/nginx/: nginx.conf
try-axum/hcaptcha/: Cargo.toml
try-axum/hcaptcha/src/: main.rs
try-axum/hcaptcha/templates/: base.html  feed.html  feed_action.html
try-axum/jwt/: Cargo.toml
try-axum/jwt/src/: main.rs
try-axum/middleware/: Cargo.toml
try-axum/middleware/src/: main.rs  user_agent.rs
try-axum/postgres/: Cargo.toml  axum.sql
try-axum/postgres/src/: main.rs
try-axum/redis/: Cargo.toml
try-axum/redis/src/: main.rs
try-axum/request/: Cargo.toml
try-axum/request/src/: main.rs
try-axum/response/: Cargo.toml
try-axum/response/src/: main.rs
try-axum/route/: Cargo.toml
try-axum/route/src/: main.rs
try-axum/session/: Cargo.toml
try-axum/session/src/: main.rs
try-axum/state/state_compound/: Cargo.toml
try-axum/state/state_compound/src/: main.rs
try-axum/static-files/: Cargo.toml
try-axum/static-files/src/: main.rs
try-axum/static-files/static/: axum-rs.txt
try-axum/template/: Cargo.toml
try-axum/template/src/: main.rs
try-axum/template/templates/: index.html
try-axum/upload-file/: Cargo.toml
try-axum/upload-file/src/: main.rs
