[package]
name = "broccoli_axum_config"
version = "0.1.0"
edition = "2021"
authors = ["sean seanxu24@outlook.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/seanxu24/broccoli"
homepage = "https://github.com/seanxu24/broccoli/try-axum/config"
description = "A Rust Project"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3"
tokio = {version = "1",features = ["full"]}
serde = {version = "1", features = ["derive"]}
dotenv="0.15"
config = "0.11"
redis={version="0.21",features=["tokio-comp","aio"]}
deadpool-postgres="0.9"
tokio-postgres = "0.7"
