[package]
name = "broccoli_axum_upload_file"
version = "0.1.0"
edition = "2021"
authors = ["sean seanxu24@outlook.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/seanxu24/broccoli"
homepage = "https://github.com/seanxu24/broccoli/try-axum/upload-file"
description = "A Rust Project"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.3",features = ["multipart"]}
tokio = {version = "1",features = ["full"]}